packages/ag-grid-docs/src/best-angular-2-data-grid/styles.css
*
{
margin:0;
padding: 0;
}
html, body {
font-family: 'Montserrat', sans-serif;
overflow-x: hidden;
}
/*above the fold section*/
h1, h2, h3, h4, h5, p{
text-align: center;
}
h1 {
margin-bottom: 20px;
margin-top: 40px;
font-size: 54px;
font-weight: 900;
}
h2 {
font-weight: 500;
margin-top: 50px;
margin-bottom: 50px;
text-transform: uppercase;
}
h3 {
margin-bottom: 30px;
margin-top: 30px;
text-transform: uppercase;
}
h4 {
margin-bottom: 30px;
margin-top: 30px;
font-weight: 600;
}
h5 {
margin-bottom: 30px;
margin-top: 30px;
}
p {
font-family: 'Montserrat', sans-serif;
font-size: 17px;
}
hr {
width: 50%;
margin: 0 auto;
margin-bottom: 20px;
margin-top: 50px;
}
/*nav-section*/
#nav-bar {
position: sticky;
top: 0;
z-index: 10;
}
.navbar {
background: linear-gradient(to top left, #0092ff, #006ad2);
}
#logo {
width: 83px;
}
#get-started {
background: white;
border-radius: 15px 15px;
}
a#get-started {
color: #097ed6;
font-weight: 800;
}
.navbar-light .navbar-nav .nav-link {
color: #e0e0e0;
}
.navbar-light .navbar-nav .nav-link:hover{
color: white;
}
.navbar-nav li {
padding: 0 10px;
}
/*above-fold*/
.snippet {
font-size: 21px;
margin-top: 50px;
}
.example.code {
max-width: 70%;
}
/*titles*/
.title::before {
content: '';
background: linear-gradient(to top left, #097ed6, #0074e6);
height: 5px;
width: 200px;
margin-left: auto;
margin-right: auto;
display: block;
transform: translateY(63px);
}
.title-small::before {
content: '';
background: linear-gradient(to top left, #097ed6, #0074e6);
height: 5px;
width: 200px;
margin-left: auto;
margin-right: auto;
display: block;
transform: translateY(58px);
}
.title-small::after {
content: '';
background: linear-gradient(to top left, #097ed6, #0074e6);
height: 10px;
width: 50px;
margin-left: auto;
margin-right: auto;
margin-bottom: 40px;
display: block;
transform: translateY(17px);
}
.title::after {
content: '';
background: linear-gradient(to top left, #097ed6, #0074e6);
height: 10px;
width: 50px;
margin-left: auto;
margin-right: auto;
margin-bottom: 40px;
display: block;
transform: translateY(17px);
}
.text-muted {
margin-top: 5px;
}
/*versions-sections*/
#versions {
background: #fbfbfb;
padding-top: 10px;
padding-bottom: 40px;
margin-top: 40px;
margin-bottom: 40px;
}
#api {
background: #fbfbfb;
padding-top: 10px;
padding-bottom: 40px;
margin-top: 40px;
margin-bottom: 40px;
}
#resources {
background: #fbfbfb;
padding-top: 10px;
padding-bottom: 40px;
margin-top: 40px;
margin-bottom: 40px;
}
#performance {
padding-bottom: 40px;
margin-top: 40px;
margin-bottom: 40px;
}
#charting {
background: #fbfbfb;
padding-top: 40px;
padding-bottom: 40px;
margin-top: 40px;
margin-bottom: 40px;
}
/*end*/
.versions {
max-width: 30px;
margin: 0 auto;
}
#versions-pricing {
margin-bottom: 40px;
background: #ebf6ff;
padding-bottom: 50px;
padding-top: 20px;
}
#versions-pricing p {
font-size: 19px;
}
#customise {
margin-top: 80px;
margin-bottom: 80px;
}
#custom-grid {
margin-top: 80px;
margin-bottom: 60px;
}
li {
border-color: white;
border-radius: 15px;
}
/*graphic-example-section*/
.example {
display:block;
margin: 0 auto;
max-width: 100%;
box-shadow: 10px 10px 15px 10px grey;
margin-top: 40px;
margin-bottom: 40px;
}
.example-charts {
display:block;
margin: 0 auto;
max-width: 70%;
box-shadow: 10px 10px 15px 10px grey;
margin-top: 40px;
margin-bottom: 40px;
}
.example-custom {
display:block;
margin: 0 auto;
max-width: 85%;
box-shadow: 10px 10px 15px 10px grey;
margin-top: 40px;
margin-bottom: 40px;
}
/*end*/
#head-top {
background: linear-gradient(to top left, #097ed6, #0074e6);
background-size: cover;
padding: 50px 0;
color: white;
}
/*c2a*/
#c2a {
background: linear-gradient(to top left, #097ed6, #0074e6);
background-size: cover;
padding: 30px 0;
padding-right: 60px;
padding-left: 60px;
color: white;
}
#c2a-top {
text-align: center;
top: 75px;
display: block;
margin: 0 auto;
margin-top: 40px;
}
#c2a-end {
text-align: center;
margin-top: 50px;
color: white;
}
.c2a-stats {
border: 2px solid;
border-radius: 10px;
padding: 10px;
background: #ffffff;
color: #067cda;
}
#c2a-demo {
margin-top: 40px;
}
.btn-light {
padding: 12px 24px;
background-color: white;
border-color: #097ed6;
color: #097ed6;
font-size: 18px;
font-weight: 400;
}
.btn-light:hover {
background-color: #097ed6;
color: white;
}
/*end*/
#core-features.row {
color: white;
padding: 10px;
padding-top: 20px;
text-align: center;
background-color: #188ae9;
margin-top: 40px;
margin-bottom: 40px;
border-radius: 15px;
}
.features .img-container:after {
position: absolute;
content: '';
display: block;
top: 0;
left: 0;
right: 0;
bottom: 0;
background: rgba(255, 255, 255, .5) url("best-angular-grid/assets/images/play-button.png") no-repeat center center;
background-size: 75px;
size: 50px
}
.features .img-container:hover:after {
background: transparent;
}
.ag-grid-in {
text-align: center;
font-size: 18px;
line-height: 45px;
}
.opening-lead {
text-align: center;
font-size: 21px;
font-weight: 300;
background: linear-gradient(to top left, #0084e7, #00407f);
padding: 15px 0;
border-radius: 15px 50px 30px;
}
.opening-c2a {
text-align: center;
font-size: 18px;
line-height: 1;
}
.center {
display: block;
margin-left: auto;
margin-right: auto;
width: 100%;
height: 50%;
}
.feature {
display: block;
margin-left: auto;
margin-right: auto;
width: 50%;
height: 50%;
}
.container {
max-width: 90%;
}
#core-features a {
color: wheat;
text-decoration: none;
}
#core-features a:hover {
color: white;
}
#guide {
margin-top: 60px;
}
}
.core {
padding: 20px 0;
}
.enterprise {
padding: 20px 0;
}
#community-enterprise p {
text-align: left;
}
#community-enterprise img {
margin-right: 10px;
}
div#feature-performance.row {
padding: 20px 0;
}
div#layout-theme.container {
background-color: #fbfbfb;
padding: 20px 0;
border: 2px solid aliceblue;
border-radius: 15px 30px 15px;
}
img.center {
display: inline-block;
border-radius: 8px;
height: auto;
justify-content: center;
}
/* ... */

